fix header z-index, add hover styles

--- a/assets/styles/components/_base.scss
+++ b/assets/styles/components/_base.scss
@@ -16,6 +16,8 @@ body {
 	font-size: 16px;
 	line-height: 24px;
 	font-family: 'Lato', Arial, sans-serif;
+	width: 100vw;
+	overflow-x: hidden;
 }
 
 a {
@@ -24,7 +26,7 @@ a {
 
 	&:hover,
 	&:focus {
-
+		color: $secondary-dkpurple;
 	}
 }
 
