--- a/assets/styles/template-parts/_nav.scss
+++ b/assets/styles/template-parts/_nav.scss
@@ -18,6 +18,7 @@
 		color: $color-black;
 		font-weight: bold;
 	}
+
 	> ul {
 		list-style:none;
 		padding:0;
@@ -35,6 +36,7 @@
 				@include transition(.5s);
 				padding: 5px;
 			}
+
 			&:hover {
 				> a {
 					&:hover {
@@ -42,15 +44,18 @@
 					}
 				}
 			}
+
 			&.parent {
 				border-radius: 3px 3px 0 0;
 				border-width: 1px 1px 0 1px;
 				border-color: transparent;
 				border-style: solid;
 				transition: 0.5s;
+
 				> a {
 					z-index: 1000;
 					position: relative;
+
 					&:after {
 						content: "\f107";
 						@include fa-icon();
@@ -105,7 +110,7 @@
 					}
 				}
 			}
-			&:hover .submenu {
+			&:hover .submenu, > a:hover {
 				max-height:1000px;
     			transform:perspective(400) rotate3d(0,0,0,0);
 			}
@@ -133,16 +138,16 @@
 		display:none;
 		position:absolute;
 		top:95px;
-		left:-20px;
+		left:0;
 		width:100%;
 		z-index:999;
 		margin-left:0;
-		background-color: $secondary-purple;
+		background-color: $color-white;
 		font-size: 16px;
-		width: calc(100% + 40px);
+		width: 100%;
 
 		> ul {
-			padding: 0 30px;
+			padding: 0;
 
 			> li {
 				display:inline-block;
@@ -154,7 +159,7 @@
 					width:100%;
 					text-align:center;
 					line-height:64px;
-					border-bottom: 1px $color-black solid;
+					border-bottom: 1px $color-ltgray solid;
 					line-height: 40px;
 
 					&:after {
@@ -168,9 +173,17 @@
 					top:0;
 					width:100%;
 					position:relative;
+					left: 0;
+					border: none;
+					border-radius: 0;
+					border-bottom: 2px $color-ltgray solid;
 
 					li {
-						border-bottom:none;
+						border-bottom: 1px $color-ltgray dotted;
+
+						&:last-child {
+							border-bottom: none;
+						}
 					}
 				}
 			}
